# ethereum

./: README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.py
.azure-pipelines/: build.yml  deploy.yml
dashboard/: batch_queries.kql  real_time_queries.kql
data-collector/: collector.py  collector_new.py  config.json
deploy/scripts/: setup_eventhouse.py  setup_lakehouse.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
kql/functions/: calculate_gas_average.kql  get_latest_price.kql
kql/update_policies/: eth_gas_policy.kql  eth_price_policy.kql
lakehouse/notebooks/: transform_erc20_data.ipynb  transform_gas_data.ipynb
monitor/: quality_monitor.py  setup_alerts.py
tests/unit/: test_collector.py
