[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethereum-dashboard"
version = "1.0.0"
description = "Enterprise-grade real-time Ethereum dashboard using Microsoft Fabric"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Team", email = "team@yourcompany.com"}
]
maintainers = [
    {name = "DevOps Team", email = "devops@yourcompany.com"}
]
keywords = [
    "ethereum", "blockchain", "real-time", "dashboard", "microsoft-fabric",
    "azure", "data-engineering", "streaming", "analytics", "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Monitoring"
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.6",
    "flask>=2.3.3",
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.23.2",
    "azure-eventhub>=5.11.4",
    "azure-storage-blob>=12.19.0",
    "azure-storage-file-datalake>=12.14.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "azure-kusto-data>=4.3.1",
    "azure-kusto-ingest>=4.3.1",
    "pandas>=2.1.3",
    "numpy>=1.24.4",
    "pyspark>=3.5.0",
    "delta-spark>=2.4.0",
    "pyarrow>=14.0.1",
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "structlog>=23.2.0",
    "sentry-sdk>=1.38.0",
    "cryptography>=41.0.7",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tenacity>=8.2.3",
    "web3>=6.12.0",
    "eth-account>=0.9.0",
    "slack-sdk>=3.26.1",
    "microsoft-teams-webhook>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "ipython>=8.18.1",
    "jupyter-lab>=4.0.9",
    "black>=23.11.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pylint>=3.0.3",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.5",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.3"
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "responses>=0.24.1",
    "aioresponses>=0.7.6"
]
monitoring = [
    "prometheus-client>=0.19.0",
    "statsd>=4.0.1",
    "grafana-client>=4.0.0"
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0"
]

[tool.setuptools]
packages = ["data-collector", "kql", "lakehouse", "monitor", "tests", "deploy"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.kql", "*.ipynb"]

[tool.setuptools.packages.find]
where = ["."]
